--- a/templates/home.html
+++ b/templates/home.html
@@ -3,30 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>聊天界面</title>
+    <link rel="stylesheet" href="{{static_url('bootstrap/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{static_url('css/home.css')}}">
     <script type="text/javascript" charset="utf-8" src="{{static_url('js/jquery.min.js')}}"></script>
+    <script type="text/javascript" charset="utf-8" src="{{static_url('bootstrap/js/bootstrap.min.js')}}"></script>
 </head>
 <body>
-    <div id="contents" style="width:500px;height:500px;overflow:auto"></div>
-    <div>
-        <input type="text" id="message">
-        <button onclick="sendMessage()">发送</button>
+<div class="row">
+    <div class="col-md-4 col-xs-2">
+        <div>当前在线</div>
+        <div id="online"></div>
     </div>
+    <div class="col-md-7 col-xs-8">
+        <div id="contents-border">
+            <div id="contents"></div>
+        </div>
+        <div>
+            <input type="text" id="message">
+            <button class="btn btn-info" onclick="sendMessage()">发送</button>
+        </div>
+    </div>
+    <div class="col-md-1">.col-md-4</div>
+</div>
 
-    <script>
+
+<script>
         //建立websocket链接
         var ws= new WebSocket("ws://10.3.74.14:8002/chat")
         ws.onmessage = function(e){
             $('#contents').append("<p>"+e.data+"</p>")
         }
-
         function sendMessage(){
             var message = $('#message').val()
             console.log(message)
             ws.send(message)
             $('#message').val("")
         }
-
-
-    </script>
+</script>
 </body>
 </html>
